bug fix cover articles
